api-gateway/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firebase-middleware-deployment
  labels:
    app: firebase-middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firebase-middleware
  template:
    metadata:
      labels:
        app: firebase-middleware
    spec:
      containers:
        - name: firebase-middleware
          image: marcllort/car-rental:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firebase-config-volume
              mountPath: /app/
              readOnly: true # no editing!
      volumes:
        - name: firebase-config-volume
          secret:
            secretName: firebase-secret
