api-gateway/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: firebase-middleware-service
  name: firebase-middleware-service
spec:
  ports:
  - name: http
    port: 50000
    protocol: TCP
    targetPort: 8080
  selector:
    app: firebase-middleware
  type: NodePort
